# shvim

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh
src/: common.h  component.h  engine.cc  engine.h  keyboard_master.cc  keyboard_master.h  main.cc  text_editor.cc  text_editor.h  text_editor_model.cc  text_editor_model.h
